@@ -11,6 +11,8 @@ Version 1.3.6+svn:
 
   * User interface
     * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
+    * Add an additional line below the minimap in the "Multiplayer->Create game"
+      screen that displays the size of the selected map. (patch #776 by uso)
 
   * Miscellaneous
     * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
